welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:7: error: reassignment to val
		{avance();nbB=nbB+1;}
                             ^